# algae

./: .pre-commit-config.yaml  Cargo.toml  flake.bk.nix  flake.nix  rustfmt.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2lamknp6ja9hmc8pn43as4xbwnx4iif6-source  3rfn91lqch3wchpgqamxl8sazbpnxbm9-source  6m3q4yshb9awf394vm1ymw2i2g6d13c9-source  8j3gvnraildrza6lb16nqxxxvns45s89-source  bms06wm39y8rdldny64vxq3kf582vbgf-source  h2mn9hkw60rhlv4fyhz287127dim9r01-source  ig0j2439ap8lm7bscyf0cf6r40d9z1ia-source  lmq4pyb4wkw8aw97b28n60bankzvdmp0-source  siwfjv5pg68y1y2w55s1m63ma7l9lh8n-source
.github/workflows/: devenv.yaml
src/: main.rs
