[package]
name = "algae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
catppuccin = "1.2.1"
rustix = { version = "0.36.8", features = ["process"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
